--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio-nithin",
+  "name": "portfolio-praveen kumar",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
